# mimo-core

./: .gitignore  .prettierignore  package-lock.json  package.json
backend/: README.md  lambda.Dockerfile  pyproject.toml
backend/api/chat/: get.py  post.py
backend/api/demo/: pyproject.toml  sales_agent.py
backend/api/demo/utils/: common.py  constants.py  email_system.py  model.py
backend/api/integration/: get.py  post.py
backend/api/item/: get.py  post.py
backend/api/locksmith/: delete.py  generate.py  get.py
backend/api/mysterybox/: ingestor.py  post.py  pyproject.toml
backend/api/mysterybox/utils/: ingestor.py
backend/api/qa/: get.py
backend/api/sales_agent/: bot.py  email_system.py  post.py  pyproject.toml
backend/api/sales_agent/utils/: email_system.py
backend/api/slack/: post.py  pyproject.toml
backend/app/: handlers.py
backend/app/api/chat/: get.py  post.py
backend/app/api/integration/: get.py  post.py
backend/app/api/item/: get.py  post.py
backend/app/api/mysterybox/: post.py
backend/app/api/qa/: get.py
backend/app/api/util/: response.py  stream.py
backend/app/auth/: __init__.py  base.py  oauth.py  s3.py
backend/app/blackbox/: post.py
backend/app/chat/: get.py  post.py
backend/app/client/: _auth0.py  _neo4j.py  _openai.py  _pinecone.py  _secrets.py  neo4j.py  open_ai.py  parent_child_db.py  pinecone.py  secrets.py  spacy.py  ssm.py
backend/app/db/: pc.py
backend/app/fetcher/: __init__.py  base.py  google_docs.py  google_mail.py  notion.py  slack.py  upload.py  upload_docs.py  zendesk.py  zendesk_tickets.py  zoho.py  zoho_crm.py
backend/app/graph/: blocks.py  bootstrap_neo4j.cypher  db.py
backend/app/integration/: get.py  post.py
backend/app/item/: get.py  post.py
backend/app/model/: blocks.py  translator.py
backend/app/mrkl/: __init__.py  agent.py  llm.py  mrkl_agent.py  open_ai.py  openaillm.py  prompt.py  scratch_paper.py  tool.py
backend/app/mystery/: chat_system.py  context_agent.py  data_agent.py  ingestor.py  namer.py  old_chat_system.py  qa_agent.py  system.py
backend/app/util/: embed.py  llm.py  ner.py  open_ai.py  pinecone.py  response.py  secret.py  ssm.py  vectordb.py
backend/app/whitebox/: chat_system.py  context_agent.py  system.py
backend/chat/: get.py  post.py  pyproject.toml
backend/integration/: get.py  post.py  pyproject.toml
backend/item/: get.py  post.py  pyproject.toml
backend/layers/: pyproject.toml
backend/layers/aws/aws/: apigateway.py  dynamo.py  pyproject.toml
backend/layers/cold/: pyproject.toml
backend/layers/cold/cold/: __init__.py
backend/layers/data/: docs.py  fetcher.py  filter.py  upload.py
backend/layers/db/: pc.py
backend/layers/fetcher/fetcher/: __init__.py  base.py  google_docs.py  google_mail.py  microsoft_mail.py  pyproject.toml  salesforce_crm.py  zendesk_tickets.py  zoho_crm.py
backend/layers/fetcher/fetcher/auth/: oauth.py
backend/layers/graph/graph/: blocks.py  neo4j_.py  pinecone_.py  pyproject.toml  translator.py
backend/layers/mystery/: pyproject.toml
backend/layers/mystery/mystery/: chat_system.py  constants.py  data_agent.py  ingestor.py  namer.py  override.py  pyproject.toml  qa_agent.py  query.py  util.py
backend/layers/mystery/mystery/context_basket/: model.py  weaver.py
backend/layers/mystery/mystery/mrkl/: llm.py  mrkl_agent.py  open_ai.py
backend/layers/utils/: auth.py  responses.py
backend/python/: pyproject.toml
backend/python/db/: pc.py
backend/python/utils/: auth.py  constants.py  responses.py  utils.py
dashboard/: .eslintrc.cjs  next.config.mjs  package-lock.json  package.json  tailwind.config.js
fixie-agent/: agent.yaml  main.py  pyproject.toml  requirements.txt
frontend/: middleware.ts  middleware.ts.example  next.config.js  package-lock.json  package.json  tailwind.config.js
infrastructure/: .env  cdk.context.json  cdk.json  package-lock.json  package.json
infrastructure/lib/services/applicant/layers/util/: pyproject.toml
infrastructure/lib/services/applicant/layers/util/keys/: kms.py  payload.py
infrastructure/lib/services/applicant/layers/util/shared/: model.py  response.py
infrastructure/lib/services/applicant/layers/util/state/: dynamo.py  params.py
infrastructure/lib/services/connector/assets/: create.py  delete.py  get.py  integrations.py  pyproject.toml
infrastructure/lib/services/connector/assets/util/: authorizer.py  dynamo.py  model.py  response.py
infrastructure/lib/services/connector/coalescer/: .dockerignore  Dockerfile  app.py  pyproject.toml
infrastructure/lib/services/connector/coalescer/dstruct/: ingestor.py  model.py  neo4j_.py  pinecone_.py
infrastructure/lib/services/connector/coalescer/fetcher/: __init__.py  base.py  clickup.py  google_docs.py  google_mail.py  intercom_support.py  linear.py  microsoft_mail.py  model.py  notion_docs.py  pipedrive.py  salesforce_crm.py  slack_messaging.py  upload_file.py  web_link.py  zendesk_support.py  zoho_crm.py
infrastructure/lib/services/connector/coalescer/lake/: s3.py
infrastructure/lib/services/connector/coalescer/util/: app_state.py  model.py  openai_.py  translator.py
infrastructure/lib/services/detective/graph_plot/: app.py  pyproject.toml
infrastructure/lib/services/detective/graph_plot/algos/: classifier.py  embedder.py  entity_extractor.py  normalizer.py  relation_extractor.py
infrastructure/lib/services/detective/graph_plot/lake/: label_config.py  s3.py
infrastructure/lib/services/detective/v1/: context.py  get.py  pyproject.toml
infrastructure/lib/services/detective/v1/context_agent/: agent.py  model.py  reranker.py  weaver.py
infrastructure/lib/services/detective/v1/dstruct/: ingestor.py  model.py  neo4j_.py  pinecone_.py
infrastructure/lib/services/detective/v1/graph/: model.py  neo4j_.py  pinecone_.py
infrastructure/lib/services/detective/v1/mystery/: constants.py  context_basket.py  data_agent.py  query.py  venus_fly_trap.py
infrastructure/lib/services/detective/v1/mystery/context_basket/: model.py  weaver.py
infrastructure/lib/services/detective/v1/util/: params.py
zurich/: procedure.sql
(+327 files in other folders)
