[virtualenvs]
create = true
in-project = true

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mohamed Elattma <mo@mimo.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
boto3 = "^1.26.84"
ulid = "^1.1"
requests = "^2.28.2"
openai = "^0.27.0"
unstructured = "^0.5.3"
nltk = "^3.8.1"
neo4j = "^5.6.0"
pinecone-client = "^2.2.1"
tiktoken = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
