[tool.poetry]
name = "db"
version = "0.1.0"
description = ""
authors = ["Mohamed Elattma <mo@mimo.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.79"
ulid = "^1.1"
requests = "^2.28.2"
openai = "^0.27.0"

[tool.poetry.group.dev.dependencies]
boto3-stubs = {version = "1.26.79", extras = ["dynamodb", "s3"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
