[tool.poetry]
name = "sales-agent"
version = "0.1.0"
description = ""
authors = ["Henry <henryapereira00@gmail.com>"]
readme = "README.md"
packages = [{include = "sales_agent"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.138"
requests = "^2.28.2"
boto3 = "^1.26.113"
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
