[tool.poetry]
name = "sales-agent"
version = "0.1.0"
description = ""
authors = ["Henry <henryapereira00@gmail.com>"]
readme = "README.md"
packages = [{include = "sales_agent"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.138"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
