[tool.poetry]
name = "slack"
version = "0.1.0"
description = ""
authors = ["Mohamed Elattma <mo@mimo.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
boto3 = "^1.26.113"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
