[tool.poetry]
name = "graph"
version = "0.1.0"
description = ""
authors = ["Mohamed Elattma <mo@mimo.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
neo4j = "^5.7.0"
pinecone-client = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
