[virtualenvs]
create = true
in-project = true

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mohamed Elattma <mo@mimo.team>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.84"
requests = "^2.28.2"
unstructured = "^0.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"