[virtualenvs]
create = true
in-project = true

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mohamed Elattma <mo@mimo.team>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.84"
requests = "^2.28.2"
openai = "^0.27.8"
neo4j = "^5.9.0"
pinecone-client = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"