[tool.poetry]
name = "detective"
version = "0.1.0"
description = ""
authors = ["Mohamed Elattma <mo@mimo.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
neo4j = "^5.7.0"
pinecone-client = "^2.2.1"
openai = "^0.27.4"
backoff = "^2.2.1"
boto3 = "^1.26.120"
requests = "^2.28.2"
tiktoken = "^0.3.3"
ulid = "^1.1"
pydantic = "^1.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
