[tool.poetry]
name = "util"
version = "0.1.0"
description = ""
authors = ["Mohamed Elattma <mo@mimo.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.116"
ulid = "^1.1"
requests = "^2.29.0"
pyjwt = {extras = ["crypto"], version = "^2.6.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
